[fix] scrolling on mobile was overlapping with fixed footer

--- a/css/style.css
+++ b/css/style.css
@@ -93,14 +93,14 @@ body {
 
 main {
     padding: 5px 3rem;
+    top: 100px;
+    bottom: 15%;
+    position:absolute;
+    overflow: auto;
 }
 
 main ul {
     list-style-type: none;
-}
-
-aside {
-    padding: 5px 3rem;
 }
 
 section {
@@ -212,6 +212,8 @@ button,
     opacity: var(--opactiy-header-and-footer);
     width: 100%;
     bottom: 0;
+    height: 15%;
+    position: absolute;
     box-shadow: var(--box-shawdow-footer);
 }
 
